Signup Functionality Updated

--- a/styles/signup.css
+++ b/styles/signup.css
@@ -103,7 +103,7 @@ button:hover {
 
 #toggleButton {
     background-color: #ffa500;
-    color: white;
+    color: black;
     border: none;
     padding: 0.5rem 1rem;
     border-radius: 4px;
