--- a/styles/index.css
+++ b/styles/index.css
@@ -41,7 +41,12 @@ body {
     height: 30px;
     /* justify-content: space-around; */
 }
-
+.header_wrap>#user-name{
+    font-size: 13px;
+    margin-top: 8px;
+    margin-right: 5px;
+    
+}
 .header_wrap a{
     color: white;
 }
