--- a/styles/women_section.css
+++ b/styles/women_section.css
@@ -287,3 +287,9 @@ body {
   width: 100%;
   height: auto;
 }
+/* mukul */
+.header_wrap>#user-name{
+  font-size: 13px;
+  margin-top: 8px;
+  margin-right: 5px;
+}
